--- a/iOS_Day_02_Tasks/2M_Task_01/2M_Task_01/Base.lproj/Main.storyboard
+++ b/iOS_Day_02_Tasks/2M_Task_01/2M_Task_01/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -166,7 +167,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wd8-X4-lql" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="835.87786259541986" y="-27.464788732394368"/>
+            <point key="canvasLocation" x="706" y="4"/>
         </scene>
     </scenes>
     <resources>
